--- a/spf/layer_100/Makefile
+++ b/spf/layer_100/Makefile
@@ -1,10 +1,13 @@
 GCC = gcc
 FLAGS = -Wall -Wextra --std=gnu99 -pedantic -Werror -g
 
-all : tail
+all : tail xargs
 
 tail : keker_tail.c
 	$(GCC) $(FLAGS) -o keker_tail keker_tail.c
 
+xargs : keker_xargs.c
+	$(GCC) $(FLAGS) -o keker_xargs keker_xargs.c
+
 clean :
-	rm keker_tail
+	rm keker_tail keker_xargs
