[layer_101] filius: ifdef MUTEX

--- a/spf/layer_101/Makefile
+++ b/spf/layer_101/Makefile
@@ -1,11 +1,11 @@
 GCC = gcc
 FLAGS = -Wall -Wextra --std=gnu99 -pedantic -Werror -g
 
-all : pater_client pater_server filius
+all : pater filius_m
 
 pater : pater_client pater_server
 
-filius : filius_c
+filius_m : filius_mut
 
 pater_client : pater/client.c
 	$(GCC) $(FLAGS) -o pater_client pater/client.c
@@ -13,8 +13,8 @@ pater_client : pater/client.c
 pater_server : pater/server.c
 	$(GCC) $(FLAGS) -o pater_server pater/server.c
 
-filius_c : filius/filius.c filius/alphabet.c
-	$(GCC) $(FLAGS) -pthread -o filius_run filius/alphabet.c filius/filius.c
+filius_mut : filius/filius.c filius/alphabet.c
+	$(GCC) $(FLAGS) -D MUTEX -pthread -o filius_mut filius/alphabet.c filius/filius.c
 
 clean :
 	rm pater_client pater_server
