[layer_101] filius: rwlock and define for building

--- a/spf/layer_101/Makefile
+++ b/spf/layer_101/Makefile
@@ -1,11 +1,11 @@
 GCC = gcc
 FLAGS = -Wall -Wextra --std=gnu99 -pedantic -Werror -g
 
-all : pater filius_m
+all : pater filius
 
 pater : pater_client pater_server
 
-filius_m : filius_mut
+filius : filius_mut filius_rw
 
 pater_client : pater/client.c
 	$(GCC) $(FLAGS) -o pater_client pater/client.c
@@ -15,6 +15,9 @@ pater_server : pater/server.c
 
 filius_mut : filius/filius.c filius/alphabet.c
 	$(GCC) $(FLAGS) -D MUTEX -pthread -o filius_mut filius/alphabet.c filius/filius.c
+
+filius_rw : filius/filius.c filius/alphabet.c
+	$(GCC) $(FLAGS) -D RW -pthread -o filius_rw filius/alphabet.c filius/filius.c
 
 clean :
 	rm pater_client pater_server
