[layer_101] filius: system v semaphore

--- a/spf/layer_101/Makefile
+++ b/spf/layer_101/Makefile
@@ -5,7 +5,7 @@ all : pater filius
 
 pater : pater_client pater_server
 
-filius : filius_mut filius_rw filius_sem_pos
+filius : filius_mut filius_rw filius_sem_pos filius_sem_sysv
 
 pater_client : pater/client.c
 	$(GCC) $(FLAGS) -o pater_client pater/client.c
@@ -21,6 +21,9 @@ filius_rw : filius/filius.c filius/alphabet.c
 
 filius_sem_pos : filius/filius.c filius/alphabet.c
 	$(GCC) $(FLAGS) -D SEM_POS -pthread -o filius_sem_pos filius/alphabet.c filius/filius.c
+	
+filius_sem_sysv : filius/filius.c filius/alphabet.c
+	$(GCC) $(FLAGS) -D SEM_SYSV -pthread -o filius_sem_sysv filius/alphabet.c filius/filius.c
 
 clean :
 	rm pater_client pater_server
