[layer_110] super advanced logger (thx @timlathy for idea)

--- a/spf/layer_110/Makefile
+++ b/spf/layer_110/Makefile
@@ -4,11 +4,11 @@ FLAGS_NON_PEDANTIC = -Wall -Wextra --std=gnu99 -g
 
 all : server
 
-server : server.c
-	$(GCC) $(FLAGS) -o server server.c
+server : server.c logger.c
+	$(GCC) $(FLAGS) -o server logger.c server.c
 
-server_non_pedantic : server.c
-	$(GCC) $(FLAGS_NON_PEDANTIC) -o server server.c
+server_non_pedantic : server.c logger.c
+	$(GCC) $(FLAGS_NON_PEDANTIC) -o server logger.c server.c
 
 logger : logger.c
 	$(GCC) $(FLAGS) -o logger logger.c
