--- a/spf/layer_110/Makefile
+++ b/spf/layer_110/Makefile
@@ -2,10 +2,13 @@ GCC = gcc
 FLAGS = -Wall -Wextra --std=gnu99 -pedantic -Werror -g
 FLAGS_NON_PEDANTIC = -Wall -Wextra --std=gnu99 -g
 
-all : server
+all : server client
 
 server : server.c logger.c error.c
 	$(GCC) $(FLAGS) -o server error.c logger.c server.c
+
+client : client.c logger.c error.c
+	$(GCC) $(FLAGS) -o client error.c logger.c client.c
 
 server_non_pedantic : server.c logger.c error.c
 	$(GCC) $(FLAGS_NON_PEDANTIC) -o server error.c logger.c server.c
