[layer_110] c works on helios

--- a/spf/layer_110/Makefile
+++ b/spf/layer_110/Makefile
@@ -1,4 +1,5 @@
 GCC = gcc
+# add -lsocket on helios
 FLAGS = -Wall -Wextra --std=gnu99 -pedantic -Werror -g
 FLAGS_NON_PEDANTIC = -Wall -Wextra --std=gnu99 -g
 
